ITEJA_ICSHP_Jačková_Nikola/Grammar/ITEJA_Grammar.txt
program = "BEGIN" block "END.";

block = {"var" ident {"," ident} ";"} {statement};

statement = "if" "(" condition ")" "{" {block} "}" ["else" "{" {block} "}"]
	| "while" "(" condition ")" "{" {block} "}"
	| ident "=" (expression | string) ";"
	| "method" ident "(" [parameter {"," parameter}] ")" ";"
	| "for" ident "," "from" expression "to" expression "," ident "=" expression ";" "{" {block} "}";

condition = expression [("!=" | "==" | "<" | "<=" | ">" | ">=") expression];

expression = ["+"|"-"] term {("+"|"-") term};

term = factor {("*"|"/") factor};

factor = ident | number | "(" expression ")" | string;

ident = /[a-zA-Z][a-zA-Z0-9]*/;

number = (double | integer);

integer = /[0-9]+/;

double = /[0-9]+.[0-9]+/;

string = /\"(.*?)\"/;

parameter = expression | ident | string;
